fix: add spacing between switch and text

--- a/src/extension/popup/gleitzeitkonto-browser.scss
+++ b/src/extension/popup/gleitzeitkonto-browser.scss
@@ -51,6 +51,7 @@ body {
     --circle: #9ea0be;
     --duration: 0.3s;
     --text: #9ea0be;
+    margin-left: 2rem;
     cursor: pointer;
     input {
         display: none;
